--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,8 @@ before_script:
 script:
   - /System/Library/Frameworks/Ruby.framework/Versions/"${CASK_RUBY_TEST_VERSION}"/usr/bin/bundle exec "/System/Library/Frameworks/Ruby.framework/Versions/${CASK_RUBY_TEST_VERSION}/usr/bin/rake" test TESTOPTS="--seed=14827"
 
-# notifications:
+notifications:
+  email: false
 #   irc:
 #     channels:
 #       - "chat.freenode.net#homebrew-cask"
@@ -68,4 +69,3 @@ script:
 #       - "%{build_number}: %{branch}@%{commit} %{author} -> %{message} %{build_url}"
 #     use_notice: true
 #     skip_join: true
-#   email: false
