--- a/.travis.yml
+++ b/.travis.yml
@@ -60,12 +60,12 @@ before_script:
 script:
   - /System/Library/Frameworks/Ruby.framework/Versions/"${CASK_RUBY_TEST_VERSION}"/usr/bin/bundle exec "/System/Library/Frameworks/Ruby.framework/Versions/${CASK_RUBY_TEST_VERSION}/usr/bin/rake" test TESTOPTS="--seed=14827"
 
-# notifications:
-#   irc:
-#     channels:
-#       - "chat.freenode.net#homebrew-cask"
-#     template:
-#       - "%{build_number}: %{branch}@%{commit} %{author} -> %{message} %{build_url}"
-#     use_notice: true
-#     skip_join: true
-#   email: false
+notifications:
+  irc:
+    channels:
+      - "chat.freenode.net#homebrew-cask"
+    template:
+      - "(%{repository_slug}) %{build_number}: %{branch}@%{commit} %{author} -> %{message} %{build_url}"
+    use_notice: true
+    skip_join: true
+  email: false
