--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ notifications:
     channels:
       - "chat.freenode.net#homebrew-cask"
     template:
-      - "(%{repository_slug}) %{build_number}: %{branch}@%{commit} %{author} -> %{message} %{build_url}"
+      - "(%{repository_name}) %{build_number}: %{branch}@%{commit} %{author} -> %{message} %{build_url}"
     use_notice: true
     skip_join: true
   email: false
